cloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deploy
  namespace: dev
  labels:
    app: service-a
    k8s-app: service-a
    version: v1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: service-a
      k8s-app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        k8s-app: service-a
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/service-a/actuator/prometheus"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: service-a
        image: de.icr.io/appops/service-a:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-port
        readinessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 30
          initialDelaySeconds: 50
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /service-a/actuator/health
            port: 8080
          periodSeconds: 30
          initialDelaySeconds: 60
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: service-a-svc
  namespace: dev  
  labels:
    app: service-a
    k8s-app: service-a
    version: v1
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http-port
    protocol: TCP
  selector:
    app: service-a
    k8s-app: service-a
    version: v1
